# simul-atrophy

./: .gitignore  CMakeLists.txt  LICENSE.txt  index.html  index.md  params.json  readme.md
_layouts/: index.html
basicExample/: bMask1.mha  bTest1.mha  test1Atrophy1.mha
cmake/Modules/: CorrectWindowsPaths.cmake  FindPETSc.cmake  FindPackageMultipass.cmake  ResolveCompilerPaths.cmake
configFiles/: atrophyContrib4p_Gm0p_Wm100p  atrophyContrib4p_Gm100p_Wm0p  atrophyHippocampus  atrophyInRoi  atrophyTableCarmichaelOriginal  atrophyTableCarmichaelOriginalWithPercentage  freeSurferAllCsfLabelsDetailedInfo  freeSurferCsfLabelTableWithZeroValue  freeSurferCsfLabels  helmholtz.cfg  patientsList.csv  petsc_ops_gamg_detailedSummary  petsc_ops_hypre_detailedSummary  petsc_ops_hypre_notDetailedSummary  petsc_ops_lu
configFiles/adlemModelOptions/: div12pt_ops.txt  div12pt_parShort_ops.txt
configFiles/atrophyTables/: csfAndNbrRegionWithZeroValue
configFiles/freeSurferLabelsAndTables/: freeSurferCsfAllVentriclesLabelTableForModel  freeSurferCsfLabelTableWithZeroValue  freeSurferCsfLabelTableWithZeroValue_ForEmotivityStudy  freeSurferCsfRegionsExceptAllVentriclesLabelTableForModel  freeSurferCsfRegionsNotMeasuredInEmotivityStudyLabelTableForModel  freeSurferLabelsAseg.txt  freeSurferLabelsWmparc.txt  labelsWithAtrophyMeasurements_EmotivityStudy.txt
configFiles/petsc_options/: KSPfgmresPCfsSchurSelfUpper_FS0PChypre_FS1KSPpreonly_NodetailedSummary  KSPfgmresPCfsSchurSelfUpper_FS0PChypre_FS1KSPpreonly_detailedSummary  KSPfgmresPCfsSchurSelfUpper_FS0PCsor_FS1KSPpreonly_NodetailedSummary  KSPfgmresPCfsSchurSelfUpper_FS0PCsor_FS1KSPpreonly_detailedSummary  PCfsSchurSelf_FS0PCgamgJacobi  PCfsSchurSelf_FS0PChypre_detailedSummary
configFiles/post_process/: oasis_study.txt  (+4 more)
notebooks/: create_image_from_labels.ipynb
scripts/: AdLem3Dhypre.pbs  bish_utils.py  compare_with_reg.py  create_atrophy_map.py  extractSliceVideoFrom4d.py  generateCroppedSegImages.py  generateCroppedSegImagesFromFsSeg.py  gmWmAtrophyGen.py  image_math.py  padCsfInStrippedSkullAndTakeConvexHull.py  pasteCroppedImagesToBiggerImages.py  post_process.py  pythonTest.py  reconAll.pbs  runAdLemModel.py  runAdLemModelCluster.py  runAdLemModelFromCsvFile.py  runAdLemModelMultipleImages.py  simul_atrophy.py  simul_atrophy_multiple_images.py  synthetic_images.py  warpAtDifferentScales.py
src/: ADDeformModel.hxx  ADLinearElastic.cxx  ADLinearElastic2D.hxx  ADLinearElasticMain.cxx  AdLem2D.cxx  AdLem3D.cxx  CMakeLists.txt  CreateImageFromRegion.cxx  ExtractRegionOfDtiByMask.cxx  HelmHoltzDecomposer.cxx  HhDecomposeMain.cxx  PetscAdLem2D.cxx  PetscAdLem2DMain.cxx  PetscAdLem3D.cxx  PetscAdLemMain.cxx  PetscAdLemTaras2D.cxx  PetscAdLemTaras3D.cxx  PetscAdLemTaras3D_computMatrixRhsDrivenCavityTest1.cxx  PetscAdLemTaras3D_computeMatrixRhsDrivenCavityTest.cxx  PetscStokes2D.cxx  PetscStokes2DTest.cxx  PoissonProblem.cxx  PoissonSolver.cxx  SwitchUpperLowerTriangular.cxx  UpdateMaskAndAtrophyMain.cxx  WarpImage.cxx  binarizeThreshold.cxx  blurWithGaussian.cxx  composeDisplacementFields.cxx  convexHullExtractor.cxx  createAtrophyMapFromRoi.cxx  createDiffusionTensorImage.cxx  createImageFromLabelImage.cxx  diffuseImage.cxx  pasteImageToBiggerImage.cxx  replaceLabelsInLabelImage.cxx  signedDanielssonDistance.cxx  testsMain.cxx  uniformizeWithRegionalMeans.cxx  warpAtDifferentScales.py
src/includes/: ADLinearElastic.hxx  ADLinearElastic2D.hxx  AdLem2D.hxx  AdLem3D.h  AdLem3D.hxx  GlobalConstants.h  GlobalConstants.hxx  HelmHoltzDecomposer.hxx  InverseDisplacementImageFilter.h  InverseDisplacementImageFilter.txx  PetscAdLem2D.hxx  PetscAdLem3D.h  PetscAdLem3D.hxx  PetscAdLemTaras2D.hxx  PetscAdLemTaras3D.h  PetscAdLemTaras3D.hxx  PoissonProblem.hxx  PoissonSolver.hxx  itkAnisotropicDiffusionWithMaskFunction.h  itkAnisotropicDiffusionWithMaskImageFilter.h  itkAnisotropicDiffusionWithMaskImageFilter.hxx  itkGradientAnisotropicDiffusionWithMaskImageFilter.h  itkGradientNDAnisotropicDiffusionWithMaskFunction.h  itkGradientNDAnisotropicDiffusionWithMaskFunction.hxx  itkScalarAnisotropicDiffusionWithMaskFunction.h  itkScalarAnisotropicDiffusionWithMaskFunction.hxx
src/matlab/: .gitignore  matlabMain.m  savevtk.m  solveSysFromMatlab.c
src/matlab/modelInMatlab/: AdLemAl2D.m  AdLemAl3D.m  AdLemExperiments2D.m  AdLemTaras2D.m  AdLemTaras3D.m  Stokes_continuity_constant_viscosity.m  Stokes_continuity_variable_viscosity.m  createGridStencilStructure.m  createSyntheticProblem2D.m  getPos2D.m  getPos3D.m  main2D.m  main3D.m  mit18086_navierstokes.m  reorderInterLeavedToBlockwise3Dof.m  reorderInterLeavedToBlockwise4Dof.m  staggeredGridIrregularBoundary2D.m  staggeredGridTest3D.m  staggeredGridTests1D.m  staggeredGridTests2D_1.m  staggeredGridTests2D_2.m  staggeredGridTests2D_3.m  staggeredGridTests2D_4.m  staggeredGridTests2D_5.m
src/matlab/modelInMatlab/atrophyGenerationProcessing/: adaptDivMap.m  atrophy_synth.m  circleMask.m  computeAtrophy.m  computeAtrophy3D.m  diffuseAtrophy.m  ellipseMask.m  gauss2d.m  gbell.m  getDiffusionImage.m  getOrthogonalVector.m  getSynthAtrophy.m  getTwoOrthogonalVectorFields.m  getUnitVectors.m  isCSF.m  miccai2014Experiments.m  rotate3dVectorField.m  shapesForCreatingAtrophy.m  simpleAtrophyPatterns.m  simpleAtrophyPatterns1.m  sphereMask.m
src/matlab/modelInMatlab/imageUtilities/: getCuboidConvexHull.m  getImageSliceFromNifti.m  getRectConvexHull.m  getSegAndDivMask.m
src/matlab/modelInMatlab/imageUtilities/warpingInterpolation/: expRecursive.m  gridDeform.m  interpolateAtEdgeFromCellCenter.m  interpolateBilinear.m  invertDisplacementField.m  transformImage.m  transformImage1.m  transformImageTests.m  transformImageUinv.m  transformImageWrong.m  vecCompose.m  vecComposeTest.m
src/matlab/modelInMatlab/tests/: createMatricesTest.m  getRotField.m  vTest.m
src/matlab/modelInMatlab/utilities/: div2D.m  div2D_new.m  div3D.m  getCol.m  getCol3D.m  grad2D.m  grad2D_new.m  grad3D.m  gradientAtEdges2D.m  nullSol3D.m  null_sols.m  restoreFromData3D.m  vec3DToVtk.m  writeSparseAandBToFile.m  writemetaimagefile.m
(+9 files in other folders)
